--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.datasource.url=jdbc:mysql://192.168.20.49:3306/ajing?useUnicode=true&char
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.mapper-locations=classpath:Mappers/*.xml
+mybatis.type-aliases-package=com.example.demo.javabean
+
+logging.level.com.example.demo.dao.CityMapper = debug
+
+
